# data_process_v2

./: README.md
generate_query/: CMakeLists.txt  main.cc  query_command.cpp  query_command.h  type.h
ldbc/interactive/: interactive_complex_1.graph
ldbc/interactive/origin_query/: query_1.graph
ldbc_sample/: comment_replyOf_comment_0_0.csv  person_knows_person_0_0.csv
read_csv/: CMakeLists.txt  csv_command.cpp  csv_command.h  main.cc
read_csv/utility/: CMakeLists.txt  command_parser.cpp  command_parser.h
